force-app/main/default/objects/ProjectLocation__c/ProjectLocation__c.object-meta.xml
<CustomObject>
    <description>Project Location relates a Location to a Project. Project Location is related Project, Job, and Location.</description>
    <label>Project Location</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Location ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>