force-app/main/default/objects/ProjectLocation__c/fields/AllowTeamManagement__c.field-meta.xml
<CustomField>
    <fullName>AllowTeamManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Team Management in OneHub Mobile</label>
    <type>Checkbox</type>
</CustomField>