force-app/main/default/objects/ProjectLocation__c/fields/BillingReviewed__c.field-meta.xml
<CustomField>
    <fullName>BillingReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Reviewed</label>
    <type>Checkbox</type>
</CustomField>