force-app/main/default/objects/ProjectLocation__c/fields/BillingStatus__c.field-meta.xml
<CustomField>
    <fullName>BillingStatus__c</fullName>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
                <default>true</default>
                <label>Billable</label>
            </value>
            <value>
                <fullName>NotBillable</fullName>
                <label>Not Billable</label>
            </value>
            <value>
                <fullName>NeedsReview</fullName>
                <label>Needs Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>