force-app/main/default/objects/ProjectLocation__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supplier Requested</fullName>
            </value>
            <value>
                <fullName>Retailer Requested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>