force-app/main/default/objects/ProjectLocation__c/fields/CompletionStatus__c.field-meta.xml
<CustomField>
    <fullName>CompletionStatus__c</fullName>
    <label>Completion Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>