force-app/main/default/objects/ProjectLocation__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>The store end time</description>
    <label>End Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>