force-app/main/default/objects/ProjectLocation__c/fields/ExecutedDate__c.field-meta.xml
<CustomField>
    <fullName>ExecutedDate__c</fullName>
    <label>REMOVE Executed Date</label>
    <type>DateTime</type>
</CustomField>