force-app/main/default/objects/ProjectLocation__c/fields/ExecutionCompany__c.field-meta.xml
<CustomField>
    <fullName>ExecutionCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Locations</relationshipLabel>
    <relationshipName>Project_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>