force-app/main/default/objects/ProjectLocation__c/fields/HasBillingIssues__c.field-meta.xml
<CustomField>
    <fullName>HasBillingIssues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Billing Issues</label>
    <type>Checkbox</type>
</CustomField>