force-app/main/default/objects/ProjectLocation__c/fields/HelpTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>HelpTimeMinutes__c</fullName>
    <formula>IF (ISBLANK(HelpTimeMinutesOverride__c),HelpTimeMinutesCalculated__c,HelpTimeMinutesOverride__c)</formula>
    <label>HelpTime Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>