force-app/main/default/objects/ProjectLocation__c/fields/HelpTimeMinutesOverride__c.field-meta.xml
<CustomField>
    <fullName>HelpTimeMinutesOverride__c</fullName>
    <label>HelpTime Minutes Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>