force-app/main/default/objects/ProjectLocation__c/fields/IsNewLocation__c.field-meta.xml
<CustomField>
    <fullName>IsNewLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a if the project location i added in scheduled state</description>
    <label>is New Location</label>
    <type>Checkbox</type>
</CustomField>