force-app/main/default/objects/ProjectLocation__c/fields/JobExceptions__c.field-meta.xml
<CustomField>
    <fullName>JobExceptions__c</fullName>
    <label>Job Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>