force-app/main/default/objects/ProjectLocation__c/fields/KeepAssignment__c.field-meta.xml
<CustomField>
    <fullName>KeepAssignment__c</fullName>
    <formula>IF (OR(ISPICKVAL( KeepAssignmentOverride__c, &#39;No Override&#39;),ISBLANK(TEXT(KeepAssignmentOverride__c))), Project__r.KeepAssignment__c, IF (ISPICKVAL(KeepAssignmentOverride__c, &#39;Yes&#39;),TRUE,FALSE) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Keep Assignment</label>
    <type>Checkbox</type>
</CustomField>