force-app/main/default/objects/ProjectLocation__c/fields/LocationExecutedDate__c.field-meta.xml
<CustomField>
    <fullName>LocationExecutedDate__c</fullName>
    <label>Location Executed Date</label>
    <type>Date</type>
</CustomField>