force-app/main/default/objects/ProjectLocation__c/fields/LocationNumber__c.field-meta.xml
<CustomField>
    <fullName>LocationNumber__c</fullName>
    <formula>Location__r.LocationNumber__c</formula>
    <label>Location #</label>
    <type>Text</type>
</CustomField>