force-app/main/default/objects/ProjectLocation__c/fields/LocationScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>LocationScheduledDate__c</fullName>
    <label>Location Scheduled Date</label>
    <type>Date</type>
</CustomField>