force-app/main/default/objects/ProjectLocation__c/fields/NoofActiveJobsStartedOntime__c.field-meta.xml
<CustomField>
    <fullName>NoofActiveJobsStartedOntime__c</fullName>
    <label>No of Active Jobs Started Ontime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>