force-app/main/default/objects/ProjectLocation__c/fields/NumberofImages__c.field-meta.xml
<CustomField>
    <fullName>NumberofImages__c</fullName>
    <label>Number of Images</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>