force-app/main/default/objects/ProjectLocation__c/fields/OneHubLocationId__c.field-meta.xml
<CustomField>
    <fullName>OneHubLocationId__c</fullName>
    <formula>Location__r.OneHubLocationID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OneHub Location ID</label>
    <type>Text</type>
</CustomField>