force-app/main/default/objects/ProjectLocation__c/fields/OneHubRetailerId__c.field-meta.xml
<CustomField>
    <fullName>OneHubRetailerId__c</fullName>
    <label>OneHub Retailer Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>