force-app/main/default/objects/ProjectLocation__c/fields/OneHubThirdPartyAgencyContactId__c.field-meta.xml
<CustomField>
    <fullName>OneHubThirdPartyAgencyContactId__c</fullName>
    <label>3PL Agency ContactId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>