force-app/main/default/objects/ProjectLocation__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <formula>Location__r.PostalCode__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>