force-app/main/default/objects/ProjectLocation__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <formula>Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>