force-app/main/default/objects/ProjectLocation__c/fields/ProjectTypeName__c.field-meta.xml
<CustomField>
    <fullName>ProjectTypeName__c</fullName>
    <formula>Project__r.ProjectTypeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Type Name</label>
    <type>Text</type>
</CustomField>