force-app/main/default/objects/ProjectLocation__c/fields/ReservationLocation__c.field-meta.xml
<CustomField>
    <fullName>ReservationLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reservation Location</label>
    <referenceTo>ReservationLocation__c</referenceTo>
    <relationshipLabel>Project Locations</relationshipLabel>
    <relationshipName>Project_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>