force-app/main/default/objects/ProjectLocation__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <formula>Project__r.Retailer__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer</label>
    <type>Text</type>
</CustomField>