force-app/main/default/objects/ProjectLocation__c/fields/RetailerName__c.field-meta.xml
<CustomField>
    <fullName>RetailerName__c</fullName>
    <formula>Project__r.ProjectRetailerName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Name</label>
    <type>Text</type>
</CustomField>