force-app/main/default/objects/ProjectLocation__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>