force-app/main/default/objects/ProjectLocation__c/fields/StatusComments__c.field-meta.xml
<CustomField>
    <fullName>StatusComments__c</fullName>
    <label>Status Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>