force-app/main/default/objects/ProjectLocation__c/fields/ThirdPartyAgencyContact__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyAgencyContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3PL Agency Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Locations</relationshipLabel>
    <relationshipName>Project_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>