force-app/main/default/objects/ProjectLocation__c/fields/ThirdPartySpecialRequest__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartySpecialRequest__c</fullName>
    <label>3PL Special Request</label>
    <length>50</length>
    <type>Text</type>
</CustomField>