force-app/main/default/objects/ProjectLocation__c/fields/TotalEstimatedMinutes__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimatedMinutes__c</fullName>
    <label>Total Estimated Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>