force-app/main/default/objects/ProjectLocation__c/fields/TotalNumberofExecutedJobs__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberofExecutedJobs__c</fullName>
    <label>Total Number of Executed Jobs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>