force-app/main/default/objects/ProjectLocation__c/fields/TotalNumberofJobs__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberofJobs__c</fullName>
    <label>Total Number of Jobs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>