force-app/main/default/objects/ProjectLocation__c/fields/TotalReportedMinutes__c.field-meta.xml
<CustomField>
    <fullName>TotalReportedMinutes__c</fullName>
    <label>Total Time Reported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>