force-app/main/default/objects/ProjectLocation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(Location__r.Parent__c != null, Location__r.Parent__r.Name, &#39;&#39;)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>