force-app/main/default/objects/ProjectLocation__c/validationRules/Disallow_past_schedule_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_past_schedule_dates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( LocationScheduledDate__c),LocationScheduledDate__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>Cannot schedule a location to a date that is in the past.</errorMessage>
</ValidationRule>