force-app/main/default/objects/ProjectLocation__c/validationRules/Validate_End_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_End_Time</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
ISBLANK(EndTime__c),
REGEX(EndTime__c, &quot;^(1[0-2]|0?[1-9]):[0-5][0-9] ([AaPp][Mm])$&quot;)
)
)</errorConditionFormula>
    <errorMessage>Invalid End Time. Please follow this format HH:MM AMPM</errorMessage>
</ValidationRule>