force-app/main/default/objects/ProjectLocation__c/validationRules/Validate_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Start_Time</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
ISBLANK(StartTime__c),
REGEX(StartTime__c, &quot;^(1[0-2]|0?[1-9]):[0-5][0-9] ([AaPp][Mm])$&quot;)
)
)</errorConditionFormula>
    <errorMessage>Invalid Start Time. Please follow this format HH:MM AMPM</errorMessage>
</ValidationRule>